<resources>
    <string name="app_name">Side Menu</string>
    <string name="content_desc_user_icon">User Icon</string>
    <string name="user_title">User title goes here</string>
    <string name="user_email">User email here</string>
    <string name="nav_item_first">Home</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_share">Share</string>
    <string name="nav_item_user_logout_icon">Logout</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="user_home_screen">User home Screen</string>
</resources>