<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/side_menu_group_one"
        android:checkableBehavior="single">

        <item
            android:id="@+id/side_menu_item_first"
            android:icon="@drawable/home_48px"
            android:title="@string/nav_item_first" />
    </group>

    <group
        android:id="@+id/side_menu_group_two"
        android:checkableBehavior="single">

        <item
            android:id="@+id/side_menu_settings_icon"
            android:icon="@drawable/settings_24px"
            android:title="@string/nav_item_settings" />

        <item
            android:id="@+id/side_menu_share_icon"
            android:icon="@drawable/share_24px"
            android:title="@string/nav_item_share" />

    </group>

    <item
        android:id="@+id/user_logout_icon"
        android:icon="@drawable/logout_48px"
        android:title="@string/nav_item_user_logout_icon" />

</menu>