<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/header_layout"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@drawable/header_background"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="10dp"
    android:paddingBottom="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:cardCornerRadius="50dp"
        app:cardElevation="10dp">


        <ImageView
            android:id="@+id/user_icon"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/content_desc_user_icon"
            android:src="@drawable/user_icon" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/user_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/user_title"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/user_email"
        android:textColor="@color/white"
        android:textSize="12sp" />


</LinearLayout>